<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soccercounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img" />

    <LinearLayout
        android:id="@+id/ScoringLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="@color/White"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/goals"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goals_count_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Goals_Count"
                android:textColor="@color/White"
                android:textSize="56sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/penalties_text"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/soccer_ball" />
            </RelativeLayout>

            <TextView
                android:id="@+id/penalties_count_TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/PenaltiesCount"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fouls_text"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/foul" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fouls_count_TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/FoulsCount"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Green"
                android:onClick="AddGoalTeamA"
                android:text="@string/add_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Blue"
                android:onClick="AddPenaltiesTeamA"
                android:text="@string/add_penalties" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Red"
                android:onClick="AddFoulsTeamA"
                android:text="@string/add_foul" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="@color/White"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/goals"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goals_count_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Goals_Count"
                android:textColor="@color/White"
                android:textSize="56sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/penalties_text"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/soccer_ball" />
            </RelativeLayout>

            <TextView
                android:id="@+id/penalties_count_TeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/PenaltiesCount"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fouls_text"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/foul" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fouls_count_TeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/FoulsCount"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Green"
                android:onClick="AddGoalTeamB"
                android:text="@string/add_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Blue"
                android:onClick="AddPenaltiesTeamB"
                android:text="@string/add_penalties" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/Red"
                android:onClick="AddFoulsTeamB"
                android:text="@string/add_foul" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/Grey"
        android:onClick="ResetAllScores"
        android:text="@string/reset_button_text"
        android:layout_below="@+id/ScoringLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
